bubba-frontend (2.1~pre15) hugo vincent; urgency=low

  * First commit of changing Bubba to B3 

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 12:53:33 +0200

bubba-frontend (2.1~pre14) hugo vincent; urgency=low

  * Added dep on libbubba-info-php

 -- PA Nilsson <pa@excito.com>  Thu, 26 Aug 2010 09:09:52 +0200

bubba-frontend (2.1~pre13) hugo vincent; urgency=low

  * Allowing users to add images to album from file manager. (Closes: #1509)

 -- PA Nilsson <pa@excito.com>  Wed, 25 Aug 2010 10:50:35 +0200

bubba-frontend (2.1~pre12) vincent; urgency=low

  * Fixed FTP status indication / reload problems. (Closes:# 1502)

 -- PA Nilsson <pa@excito.com>  Thu, 19 Aug 2010 14:27:04 +0200

bubba-frontend (2.1~pre11) vincent; urgency=low

  * Fix bus parsing. (Closes: #1494)
  * Fix blkid detection to bypass caches (Closes: #1493) 

 -- Tor Krill <tor@excito.com>  Wed, 18 Aug 2010 15:29:29 +0200

bubba-frontend (2.1~pre10) vincent; urgency=low

  * Fixed php-error in backup-page. (Closes: #1497)

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 10:24:49 +0200

bubba-frontend (2.1~pre9) vincent; urgency=low

  * Fixed admin rights for album.

 -- PA Nilsson <pa@excito.com>  Tue, 17 Aug 2010 09:18:05 +0200

bubba-frontend (2.1~pre8) lucid; urgency=low

  * add a 1s delay after chaning time to check if dovecot is running, due to
    race condition (Closes: #1503)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 29 Jul 2010 15:37:07 +0200

bubba-frontend (2.1~pre7) vincent; urgency=low

  * fix invocations of split → explode (Closes: #1468)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 19 Jul 2010 16:03:31 +0200

bubba-frontend (2.1~pre6) vincent; urgency=low

  * remove a couple of json_decode 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 15 Jul 2010 15:56:05 +0200

bubba-frontend (2.1~pre5) vincent; urgency=low

  * dont treat empty version as later 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 14 Jul 2010 15:57:52 +0200

bubba-frontend (2.1~pre4) vincent; urgency=low
