@@ -1,3 +1,9 @@
+bubba-frontend (2.1~pre16) vincent hugo; urgency=low
+
+  * Disable wlan settings if user has not set a timezone 
+
+ -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 13:20:17 +0200
+
 bubba-frontend (2.1~pre15) hugo vincent; urgency=low
 
   * First commit of changing Bubba to B3 
